[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=6]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -118.0
margin_top = 27.0
margin_right = -25.0
margin_bottom = 58.0
text = "Score: %s"
align = 2

[node name="LivesLabel" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 50.0
margin_top = 27.0
margin_right = 241.0
margin_bottom = 58.0
text = "Deaths: %s"

[node name="KeyLabel" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -225.0
margin_top = 27.0
margin_right = -153.0
margin_bottom = 58.0
text = "Key: %s"
align = 2

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )

[node name="Title" parent="PauseOverlay" instance=ExtResource( 2 )]
modulate = Color( 0, 0, 0, 1 )
margin_left = -130.0
margin_right = 130.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -101.0
margin_right = 130.0
margin_bottom = 101.0

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 5 )]
margin_right = 260.0
margin_bottom = 64.0

[node name="ChangeSceneButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_top = 68.0
margin_right = 260.0
margin_bottom = 133.0
text = "Main Screen"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_top = 137.0
margin_right = 260.0
margin_bottom = 202.0
